--- a/.env
+++ b/.env
@@ -1,14 +1,26 @@
-
-HOST="localhost"
-PORT=5000
+HOST="http://191.96.31.28"
+PORT=3306
 NODE_ENV=development
 DB_CONNECTION=mysql
 DATABASE_USER="root"
-PASSWORD="root"
-DATABASE="vendasafiliados"
+PASSWORD="Guga99621510!"
+DATABASE="vendasafiliado"
 SALT=10
 SECRET=thv0409
 CLIENT_SECRET=rdr7845
+
+
+# HOST="localhost"
+# PORT=5000
+# NODE_ENV=development
+# DB_CONNECTION=mysql
+# DATABASE_USER="root"
+# PASSWORD="root"
+# DATABASE="vendasafiliados"
+# SALT=10
+# SECRET=thv0409
+# CLIENT_SECRET=rdr7845
+
 # AWS_ACCESS_KEY=AKIAY4IQZPKNIRVFRVLJ
 # AWS_SECRET_ACCESS_KEY=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
 # AWS_DEFAULT_REGION=sa-east-1
