--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 HOST="http://191.96.31.28"
-PORT=3306
-NODE_ENV=development
+PORT=5000
+NODE_ENV=production
 DB_CONNECTION=mysql
 DATABASE_USER="root"
 PASSWORD="Guga99621510!"
